k8s.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: service-1
  labels:
    app: service-1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: service-1
    spec:
      containers:
        - name: main
          image: "kendo5731/gke-network-policies-test-app:latest"
          imagePullPolicy: Always
          ports:
          - name: proxy
            containerPort: 8080
            protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: service-1
  labels:
    app: service-1
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: service-1
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: service-2
  labels:
    app: service-2
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: service-2
    spec:
      containers:
        - name: main
          image: "kendo5731/gke-network-policies-test-app:latest"
          imagePullPolicy: Always
          ports:
            - name: proxy
              containerPort: 8080
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: service-2
  labels:
    app: service-2
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: service-2
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: service-1
spec:
  podSelector:
    matchLabels:
      app: service-1
  policyTypes:
    - Ingress
    - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: service-2
    ports:
    - protocol: TCP
      port: 8080
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: service-2
    ports:
    - protocol: TCP
      port: 8080
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: service-2
spec:
  podSelector:
    matchLabels:
      app: service-2
  policyTypes:
    - Ingress
    - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: service-1
    ports:
      - protocol: TCP
        port: 8080
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: service-1
    ports:
      - protocol: TCP
        port: 8080
