policies.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: service-1
spec:
  podSelector:
    matchLabels:
      app: service-1
  policyTypes:
    - Ingress
    - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: service-2
    ports:
      - protocol: TCP
        port: 8080
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: service-2
    ports:
      - protocol: TCP
        port: 8080
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: service-2
spec:
  podSelector:
    matchLabels:
      app: service-2
  policyTypes:
    - Ingress
    - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: service-1
    ports:
      - protocol: TCP
        port: 8080
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: service-1
    ports:
      - protocol: TCP
        port: 8080
